--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background: url(bg.jpg) no-repeat center center fixed;
+    background: url(./bg.webp) no-repeat center center fixed;
     background-size: cover;
 }
 .container{
